syntax = "proto2";
package IM.Login;
import "IM.BaseDefine.proto";
option optimize_for = LITE_RUNTIME;

message LoginRequest
{
    required string user_name = 1;
    required string password = 2;
    required IM.BaseDefine.ClientType client_type = 3;
    required IM.BaseDefine.UserStatusType status_type = 4;
}

message LoginResponse
{
    required uint32 server_time = 1;
    optional string result_string = 3;
    required IM.BaseDefine.UserStatusType status_type = 4;
}

// command base id: 0x0101
message MessageServerInfoRequest
{
    
}